public/css/style.css
/*
* === SETTING UP BASICS ===
*/

body {
    background: #1cb3c8;
    color: #3c415e;
    font-family: 'Abel', sans-serif;
    overflow: hidden;
}


/*
* === HEADER ===
*/

#header{
   border: 3px solid red;
}


#header img{
    width: 10%;
}

#header h1{
    font-weight: bold;
    color: #3c415e;
}


/*
* === INFO TABLE ===
*/

#informationBar{
    padding: 0px;
    border: 1px solid #3C415E;
    border-top: 1px solid #3C415E;
    
}

#infoTableHeader{
    border: 1px solid #3C415E;
    font-weight: bold;
    font-size: 30px;
}

.infoTableInfo{
    background: #738598;
    border: 1px solid #3C415E;
    font-size: 30px;
}

